Stylesheet/myStlyes.css
*{box-sizing: border-box;}

body{
    margin: 0;
    font-family: 'Raleway', sans-serif;

    
}
.header_div {
    width: 100%;
display:flex;
flex-direction: row;
}

.bookieLogotop{

    height:60%;
    
    padding-bottom:0px;
}

.header_div_left_logo{

    width:80%;
    padding-top:25px;
    padding-left:15px;
    justify-content: flex-start;
    
    
}
.header_div_right_navbar 
 {
    width: 20%;
    height: 100%;
    text-align:right;
   display:flex;
   flex-direction: row;
     text-decoration: none;
    
}     


.menu_a_link 
{
    text-decoration: none;
    color: gray;
}



.menu_a_link:hover
{
    color:#0065FC;
}

.Container1_Child_right_inner_nav2
{
    width: 50%;
    display: flex;
    justify-content: center; 
    text-align: center;
     padding-top: 25px;
     border-top: 2px solid gray;
}

.Container1_Child_right_inner_nav1
{
    width: 50%;
    display: flex;
    justify-content: center;
    text-align: center;
    padding-top: 25px;
    border-top: 2px solid gray;
}

.Container1_Child_right_inner_nav1:hover
{
    border-top: 2px solid #0065FC;

    
    
}
.Container1_Child_right_inner_nav2:hover
{
    border-top: 2px solid #0065FC;

}

.srch_Div{
    display: flex;
    flex-direction: column;
   padding-left:15px; 
}



#search
{
font-style:unset;

}

#search2
{
    color: gray;
    font-size:x-small;
    }
#searchButton2
{
    height:30px;
    width:60px;
    color:white;
    background-color: #0065FC;
    border-color:transparent;
    border-top-right-radius:20px;
    border-bottom-right-radius:20px;
       
}
#searchButton1
{
    height:30px;
    width:50px;
    background-color:gray;
    border-top-left-radius:20px;
    border-bottom-left-radius:20px;
    overflow: hidden;
}

#SearchText
{
    height: 30px;
    border-width: 0.5px;
    border-color: rgb(194, 192, 192);
}

.srch_text_button_div{
    display: flex;
    flex-wrap: wrap;

}

.srch_locaion_image{
    height:30px;
    width: 50px;
text-decoration:transparent;
background-color: grey;
border-bottom-left-radius:20px;

}

.div_src_txt_filter
{
    padding-left: .880em;
    padding-right: 6em;
    border-color: #F2F2F2;
}

.srch_filter_div
  {
    flex:100%;
    height:80px;
    display: flex;
    flex-direction: row;
    padding-top:15px;
    margin:0;
    }

    

    .srch_filter_div_left_60 
      {
        width: 63%;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        align-content:flex-start;
        align-items: center;
      }

    
    .srch_filter_div_Right_40
     {
    
        width:37%;
        
    }
    
    .filter_link
    {
        text-decoration: none;
        color: black;
    }
    .filter_link:hover
    {
        font-size:medium;
        font-style:initial;
        color: blue;
    }

  
.SrchResultText
{
color:grey;
font-size: x-small;
}

.div_src_img
{
    display: flex;
    flex-wrap:wrap;
    border-radius: 30px;
    padding-right:10px;
    height:40px;
    border-color: #F2F2F2;
    border-style: solid;
    border-width:2px;
    align-items: center;
    text-align: center;
    margin-right: auto;

}
.div_src_img:hover
{
    background-color:#DEEBFF;
}

.filter_button
{
    height:40px;
    width: 150px;
    
}

.div-srch_loc_logo{
    display: flex;
    justify-content: center;
    align-items: center;
    height:30px;
    width:40px;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    background-color: #F2F2F2;
}

  .img_icons
    {
        height:40px;
        width:40px;
        background-color:#DEEBFF;
        border-radius: 50px;
        border-color: #a3c8ff;
        border-style: solid;
        border-width:1px;
        display: flex;
        justify-content: center;
        align-items: center;
        }

  .div_filter_inner_txt
        {
            padding-left: 3px;
        }

   .div_Activity_in_city
        {
          display:flex;
          flex-direction:row;
          font-size: medium;
          background-color: transparent;     
          padding-left:17px;
          padding-top:5px;
        }

.div_txt_accom
{
 display: flex;
 flex-direction: row;
 flex-wrap: wrap;
 padding-left:.875em;   
}

.Outer_div_accom_popular {
display: flex;
flex-direction: row;
background-color:white;
width:100%;
}

.div_accom_text{
    flex:65% ;
    margin:20px;
    padding-top:20px ;
    background-color: #F2F2F2;
 border-radius: 10px;
}

.txtAccom
{

    padding-left: 25px;
}
.div_accom {
    
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content:space-evenly;
    align-content:flex-start;
    background-color:#F2F2F2;
    padding-top:10px;
   
    
}

.Inner_div_accom {
    
    width:205px;
    margin-bottom:20px;
    display: flex;
    flex-direction:column;
    align-content: center;
    background-color:white;
    border-color: white;
    border-style: solid;
    border-width:3px;
    border-top-right-radius:15px;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;

}
.Inner_div_accom_img
{
    flex:55%;
}

.Inner_div_accom_txt
{
flex:45%;
}
 
.AccomImg
{
    height: 100px;
    width:200px;
    object-fit: cover;
    border-top-right-radius:15px;
    border-top-left-radius: 15px;
}


.Inner_div_popular_img
 {
    flex: 40%;

 }
 .Inner_div_popular_text
 {
    flex: 60%;
    
 }

.Popular_Img
{  
    height:100px;
    width:100%;
    object-fit: cover;
    border-bottom-left-radius:15px;
    border-top-left-radius: 15px;
}

 .div_link_showmore
   {
    padding:10px
   } 

#link_showmore
   { 
    text-decoration: none;
    color:black;
   }
.div_popular_text 
    {
    flex:35% ;
    margin:20px;
    padding-top:20px ;

    background-color: #F2F2F2;
    border-radius: 10px;
    }

    .txtPopular
    {
        padding-left: 25px;
    }
.div_popular {
    
    background-color: #F2F2F2;
    display: flex;
    flex-direction:column;
    flex-wrap: wrap;
    align-content:center;
    justify-content:space-evenly;
        margin-top:10px;
         margin-bottom:25px;
         margin-left: 25px;
         margin-right: 25px;
        border-radius: 10px;
}

.Inner_div_Popular
{

    display: flex;
    flex-direction:row;
    
    width:100%;
    margin-bottom: 10px;
        background-color:white;
    border-top-right-radius:15px;
    border-bottom-right-radius:15px;
    border-bottom-left-radius:15px;
    border-top-left-radius: 15px;

}


.div_activity
{
display: flex;
flex-wrap:wrap;
flex-direction: row;
justify-items:flex-start;
justify-content:space-around;

padding-left:10px;
padding-right:10px;
padding-top: 15px;
padding-bottom: 15px;
height: 400px;
}

.div_activity_img1
{  
    display: flex;
    flex-direction: column;
    background-color:#F2F2F2;
    height: 370px;
    width:20%;
    border-radius:10px;
    padding: 1px;
}

.div_activity_img_2_3
{
    
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex-wrap: wrap;
    border-radius:10px;
    height:370px;
    width:20%;
    padding: 1px;
}

.Inner_div_activity_img_2_3
{  
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color:#F2F2F2;
        border-radius:10px;
        padding: 1px;
       
}



.img_height_250
{
height:320px;
width:100%;
object-fit: cover;
padding-top:1px;
border-top-right-radius:10px;
border-top-left-radius: 10px;
}

.div_place_txt
{
    height:43px;
    border-bottom-right-radius:10px;
    border-bottom-left-radius: 10px;
    
    background-color: white;
    
}

.img_height_100
{
height:100px;
width:100%;
object-fit: cover;
border-top-right-radius:10px;
border-top-left-radius: 10px;
}

.img_height_150
{
height:150px;
width:100%;
object-fit: cover;
border-top-right-radius:10px;
border-top-left-radius: 10px;
}


.div_footer {
 display: flex;
 flex-direction: row;
 flex-wrap: wrap;
background-color: #F2F2F2;
padding: 15px;
}

.div_footer_about {
   
flex:33%;

flex-direction: column;
padding-bottom: 15px;

}


.div_footer_Accom {
   
    flex:33%;

flex-direction: column;

}

.div_footer_Assistance {
  
    flex:33%;
    
    flex-direction: column;
    
}
.a_heading{
padding-bottom:20px;

}

